--- a/dhamma/.vscode/launch.json
+++ b/dhamma/.vscode/launch.json
@@ -28,6 +28,15 @@
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach"
-        }
+        },
+        {
+            "profiles": {
+              "dotnet": {
+                "commandName": "Project",
+                "hotReloadProfile": "aspnetcore"
+              }
+            }
+          }
+
     ]
 }
